--- a/requirements.txt
+++ b/requirements.txt
@@ -73,5 +73,5 @@ trio-websocket==0.9.2
 typing_extensions==4.4.0
 tzdata==2022.2
 urllib3==1.26.12
-wordcloud==1.8.2.2
+#wordcloud==1.8.2.2
 wsproto==1.2.0
