--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-bootstrap-icons==0.8.2
 django-countries==7.4.2
 django-crispy-forms==1.14.0
 django-extensions==3.2.1
+django-heroku==0.3.1
 django-jazzmin==2.6.0
 django-jet==1.0.8
 django-jet-4==0.0.1
@@ -73,5 +74,6 @@ trio-websocket==0.9.2
 typing_extensions==4.4.0
 tzdata==2022.2
 urllib3==1.26.12
+whitenoise==6.4.0
 wordcloud==1.8.2.2
 wsproto==1.2.0
