--- a/requirements.txt
+++ b/requirements.txt
@@ -58,6 +58,7 @@ pytest-metadata==2.0.4
 pytest-selenium==4.0.0
 pytest-variables==2.0.0
 python-dateutil==2.8.2
+python-decouple==3.8
 python-dotenv==1.0.0
 pytz==2022.4
 requests==2.28.1
