--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SECRET_KEY = 'django-insecure-3o-hjelm8d3xq2zovx2zqt@hqyg%&11(v&1%&7+g9+h817qo@t'
 DEBUG = True
+ENVIRONMENT = "PRODUCTION"
+          
