--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 SECRET_KEY = 'django-insecure-3o-hjelm8d3xq2zovx2zqt@hqyg%&11(v&1%&7+g9+h817qo@t'
 DEBUG = True
 ENVIRONMENT = "PRODUCTION"
-          
+CLOUD_NAME = "bongili"
+API_KEY = "479259914118822"
+API_SECRET = "21S9l1aekytyrx5dzIoEV952b2w"
