--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ ENVIRONMENT = "PRODUCTION"
 CLOUD_NAME = "bongili"
 API_KEY = "479259914118822"
 API_SECRET = "21S9l1aekytyrx5dzIoEV952b2w"
+
+HOST_PASSWORD = 'Yusuf290419'
+EMAIL = 'gilbertfullah@gmail.com'
