--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ CLOUD_NAME = "bongili"
 API_KEY = "479259914118822"
 API_SECRET = "21S9l1aekytyrx5dzIoEV952b2w"
 
-HOST_PASSWORD = "Yusuf290419"
-EMAIL = "gilbertfullah@gmail.com"
-HOST_USER = "gilbertfullah@gmail.com"
+EMAIL_HOST = smtp.office365.com
+EMAIL_PORT = 587
+EMAIL_USE_TLS = True
+EMAIL_HOST_USER = gilbertfullah@gmail.com
+EMAIL_HOST_PASSWORD = Yusuf290419
